--- a/Pages/about.html
+++ b/Pages/about.html
@@ -73,7 +73,7 @@ progress.<br>
 <br>
 <div class="a2">
 
-Proof of Rhyme is an artistic net art project that explores the possibilities of creating poetic texts based on the basic principles and technologies of Web3: decentralization, cryptography, and blockchain.<br>
+&lt;Crypto&gt;Poetry is an artistic net art project that explores the possibilities of creating poetic texts based on the basic principles and technologies of Web3: decentralization, cryptography, and blockchain.<br>
 <br>
 Proof of Rhyme is a collection of poems, a decentralized book, the result of poetic experiments, and at the same time, a «consensus algorithm» that establishes the formal «truth» of the poem and allows it to be added to the book and into the blockchain.<br>
 <br>
