--- a/pages/about.html
+++ b/pages/about.html
@@ -12,12 +12,13 @@
 <header>
 
   <div class="container-head">
-    <div class="logo"><b>&lt;Crypto&gt;Poetry</b></div>
+    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</h1></b></div>
     <nav>
       <ul>
        <li><a href="../index.html">Home</a></li>
        <li><a href="about.html">About</a></li>
        <li><a href="book.html">Book</a></li>
+       <li><a href="volume.html">Volume</a></li>
       </ul>
      </nav>
   </div>
@@ -59,13 +60,9 @@
 <div class="a1">
 <b>What did you do last summer in Web3?</b><br>
 <br>
-I wrote poetry, poems inspired by the space of the New Web, and imprinted<br>
-it in this space with the help of blockchains interfaces and dApps.<br>
-Questions that worried me in those days and still disturb me are present on<br>
-the Home page. I have found answers to some of them, and I continue to search.<br>
-The small but growing collection of poems ~ Proof of Rhyme ~ is the current<br>
-&lt;beta&gt; version of the decentralized book that I continue to publish in<br>
-progress.<br>
+I wrote poetry, poems inspired by the space of the New Web, and imprinted it in this space with the help of blockchains interfaces and dApps.<br>
+Questions that worried me in those days and still disturb me are present on the Home page. I have found answers to some of them, and I continue to search.<br>
+The small but growing collection of poems ~ Proof of Rhyme ~ is the current &lt;beta&gt; version of the decentralized book that I continue to publish in progress.<br>
 
 </div><br>
 
