--- a/pages/book.html
+++ b/pages/book.html
@@ -12,12 +12,13 @@
 <header>
 
   <div class="container-head">
-    <div class="logo"><b>&lt;Crypto&gt;Poetry</b></div>
+    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</b></h1></div>
     <nav>
       <ul>
        <li><a href="../index.html">Home</a></li>
        <li><a href="about.html">About</a></li>
        <li><a href="book.html">Book</a></li>
+       <li><a href="volume.html">Volume</a></li>
       </ul>
      </nav>
   </div>
@@ -120,11 +121,32 @@ decentralized book<br>
 <div class="container-poem4">
 <pre>
 *<br>
+<h3>CryptoAcid</h3>
+0x5B4..................................676<br>
+
+
+<div class="p4">
+<a href="https://cryptoacid.eth" class="content-l2" target="_blank">cryptoacid</a><br>
+<a href="https://cryptotrip.eth" class="content-l2" target="_blank">cryptotrip</a><br>
+<a href="https://cryptochannel.eth" class="content-l2" target="_blank">cryptochannel</a><br>
+<a href="https://cryptosleep.eth" class="content-l2" target="_blank">cryptosleep</a><br>
+</div>
+
+0xf863a3d12399190ebbc4c1eebe15857f05de25416db0dd72fa6b43f5c560543a<br>
+0x36b1c437a38093b4bca5b8742bf8ba535fccb41d04ef38e77eb147ae68df3606<br>
+0x526a98c5e1717a500507d97ade1c6306b39f6cdf9905e5ec1cb644e58f2b63cc<br>
+0x571f8fad512af7869e082ec7f1428dc8f0bd90c29f576d6055cf4006ab941df5<br>
+</pre></div>
+
+
+<div class="container-poem5">
+<pre>
+*<br>
 <h3>NewDomain</h3>
 0x7B5..................................12B<br>
 
 
-<div class="p4">
+<div class="p5">
 <a href="https://newdomain.eth" class="content-l2" target="_blank">newdomain</a><br>
 <a href="https://newhash.eth" class="content-l2" target="_blank">newhash</a><br>
 <a href="https://newdomains.eth" class="content-l2" target="_blank">newdomains</a><br>
@@ -155,14 +177,14 @@ decentralized book<br>
 
 <div class="container-chain"><a href="https://explorer.mainnet.near.org" class="content" target="_blank">{Chain:Near}</a></div>
 
-<div class="container-poem5">
+<div class="container-poem6">
 <pre>
 *<br>
 <h3>AllYouEarIsNear</h3>
 47ne9sfgPVV7P5g1apajvBZyPGFR5r17QV1DE745yhWJ<br>
 
 
-<div class="p5">
+<div class="p6">
 allyouearis.near<br>
 allyouhearis.near<br>
 allyouclearis.near<br>
@@ -205,14 +227,14 @@ FG6rZaXqR6QKctLcXuD3PgBxoK2JbeMXz9593MNKCLZk<br>
 7Q6e61zDT7cB9GQLdXZvJxffKQUtrfHyKAsqdKsUf3Mt<br>
 </pre></div>
 
-<div class="container-poem6">
+<div class="container-poem7">
 <pre>
 *<br>
 <h3>AllYouNeedIsNear</h3>
 9oFuLhapiQ6N43xejg1LHUdqGQ6zC4NZ3bMjEw1Aaitj<br>
 
 
-<div class="p6">
+<div class="p7">
 allyouneedis.near<br>
 allyoudeedis.near<br>
 allyouweedis.near<br>
@@ -256,16 +278,16 @@ FMdMzxD3BTNuETpng9LZD4mSc7XZceHKjjCiTdTSsMBG<br>
 
 </pre></div>
 
-<div class="container-chain"><a href="https://ever.live" class="content" target="_blank">{Chain:Everscale}</a></div>
+<div class="container-chain"><a href="https://everscan.io" class="content" target="_blank">{Chain:Everscale}</a></div>
 
-<div class="container-poem7">
+<div class="container-poem8">
 <pre>
 *<br>
 <h3>CrystalCoin</h3>
 0:967...315 >> 0:1f8...7e8<br>
 
 
-<div class="p7">
+<div class="p8">
 CrystalCoin<br>
 &lt;my&gt;<br>
 CrystalShip<br>
@@ -289,14 +311,14 @@ Msg2ID: 56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c<br>
 
 </pre></div>
 
-<div class="container-poem8">
+<div class="container-poem9">
 <pre>
 *<br>
 <h3>EverScale</h3>
 0:967...315 >> 0:942...063<br>
 
 
-<div class="p8">
+<div class="p9">
 EverScale<br>
 &lt;for&gt;<br>
 EverThing<br>
@@ -309,6 +331,54 @@ EverWin<br>
 
 MsgID: efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6
 
+</pre></div>
+
+
+<div class="container-chain"><a href="https://hub.mintscan.io" class="content" target="_blank">{Chain:Cosmos}</a></div>
+
+<div class="container-poem10">
+<pre>
+*<br>
+<h3>Hacker on the bridge</h3>
+
+<div class="p10">
+Tuned Lambonode<br>
+On the highway code<br>
+Look's like Lady D<br>
+Unstoppable ID<br>
+Don't hit the gas<br>
+Upper middle class<br>
+Ruby moon is rich<br>
+Hacker on the bridge<br>
+<br>
+Cloud's like a pie<br>
+Lightning in the sky<br>
+In transactions fog<br>
+Baskervilles dog<br>
+Join a final act<br>
+Fixed your contract<br>
+Ruby moon is rich<br>
+Hacker on the bridge<br>
+<br>
+Million in the hash<br>
+Billion in the cash<br>
+Trillion in the trash<br>
+Take it boring crash<br>
+Old horror tales<br>
+Mixed on your face<br>
+Ruby moon is rich<br>
+Hacker on the bridge<br>
+<br>
+</div>
+
+From: cosmos1phh8u6ty5uyxd6mulxcnt79pjp4zr8jzrqguz5<br>
+To:   cosmos1uxmjzh94huf2qd4xgpjxgg20dryal00qcu9j94<br>
+<br>
+Msg0TxH: <a href="https://www.mintscan.io/cosmos/txs/E197CAF28A4507ABA679CAC33C79F82C2759932425341E5C2B7ECB12DE7406DF" class="content-l2" target="_blank">E197CAF28A4507ABA679CAC33C79F82C2759932425341E5C2B7ECB12DE7406DF</a><br>
+<br>
+Msg1TxH: <a href="https://www.mintscan.io/cosmos/txs/6A6B9B857E4A8A944BEC97785B520482F9B6F18B289A924973F973155FD36222" class="content-l2" target="_blank">6A6B9B857E4A8A944BEC97785B520482F9B6F18B289A924973F973155FD36222</a><br>
+Msg2TxH: <a href="https://www.mintscan.io/cosmos/txs/2823070E22AA57880D3BBFEF50F1CC751615536D1CCCE913F1175465D49421D6" class="content-l2" target="_blank">2823070E22AA57880D3BBFEF50F1CC751615536D1CCCE913F1175465D49421D6</a><br>
+Msg3TxH: <a href="https://www.mintscan.io/cosmos/txs/768EB354BF70F92319EEA8DBDA4E02FA621EA08F21EBE8B309644311178F8851" class="content-l2" target="_blank">768EB354BF70F92319EEA8DBDA4E02FA621EA08F21EBE8B309644311178F8851</a><br>
 </pre></div>
 
 
