--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <header>
 
   <div class="container-head">
-    <div class="logo"><b>&lt;Crypto&gt;Poetry</b></div>
+    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</h1></b></div>
     <nav>
       <ul>
        <li><a href="index.html">Home</a></li>
        <li><a href="pages/about.html">About</a></li>
        <li><a href="pages/book.html">Book</a></li>
+       <li><a href="volume.html">Volume</a></li>
       </ul>
      </nav>
   </div>
