--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <li><a href="index.html">Home</a></li>
        <li><a href="pages/about.html">About</a></li>
        <li><a href="pages/book.html">Book</a></li>
-       <li><a href="volume.html">Volume</a></li>
+       <li><a href="pages/volume.html">Volume</a></li>
       </ul>
      </nav>
   </div>
@@ -38,7 +38,9 @@
 
 
 *<br>
-<div class="ttl"><p>Intro</p></div>
+<div class="ttl">
+  <p class="gradient-text">Intro</p>
+</div>
 
 *<br>
 *<br>
