--- a/pages/volume.html
+++ b/pages/volume.html
@@ -64,7 +64,7 @@ For cryptopoet doesn't necessarily write <i><b>about</b></i> Web3, but preferabl
 
 </div><br>
 
-<b>Intro<br></b>
+<b>Exposition and proposal<br></b>
 <br>
 <div class="va2">
 
