--- a/pages/about.html
+++ b/pages/about.html
@@ -11,17 +11,17 @@
 
 <header>
 
-  <div class="container-head">
-    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</h1></b></div>
-    <nav>
-      <ul>
-       <li><a href="../index.html">Home</a></li>
-       <li><a href="about.html">About</a></li>
-       <li><a href="book.html">Book</a></li>
-       <li><a href="volume.html">Volume</a></li>
-      </ul>
-     </nav>
-  </div>
+<div class="container-head">
+<div class="logo"><h1><b>&lt;Crypto&gt;Poetry</b></h1></div>
+<nav>
+<ul>
+<li><a href="../index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="book.html">Book</a></li>
+<li><a href="volume.html">Volume</a></li>
+</ul>
+</nav>
+</div>
 
 </header>
 
