--- a/pages/book.html
+++ b/pages/book.html
@@ -11,17 +11,17 @@
 
 <header>
 
-  <div class="container-head">
-    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</b></h1></div>
-    <nav>
-      <ul>
-       <li><a href="../index.html">Home</a></li>
-       <li><a href="about.html">About</a></li>
-       <li><a href="book.html">Book</a></li>
-       <li><a href="volume.html">Volume</a></li>
-      </ul>
-     </nav>
-  </div>
+<div class="container-head">
+<div class="logo"><h1><b>&lt;Crypto&gt;Poetry</b></h1></div>
+<nav>
+<ul>
+<li><a href="../index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="book.html">Book</a></li>
+<li><a href="volume.html">Volume</a></li>
+</ul>
+</nav>
+</div>
 
 </header>
 
@@ -42,6 +42,7 @@
 decentralized book<br>
 
 <p>*</p><br>
+
 </pre>
 </div>
 
@@ -56,14 +57,14 @@ decentralized book<br>
 
 
 <div class="p1">
-<a href="https://cryptopoetic.eth" class="content-l2" target="_blank">cryptopoetic</a><br>
-<a href="https://cryptoproject.eth" class="content-l2" target="_blank">cryptoproject</a><br>
-<a href="https://cryptoaesthetic.eth" class="content-l2" target="_blank">cryptoaesthetic</a><br>
-<a href="https://cryptoeffect.eth" class="content-l2" target="_blank">cryptoeffect</a><br>
-<a href="https://cryptoedition.eth" class="content-l2" target="_blank">cryptoedition</a><br>
-<a href="https://cryptorelease.eth" class="content-l2" target="_blank">cryptorelease</a><br>
-<a href="https://cryptoemission.eth" class="content-l2" target="_blank">cryptoemission</a><br>
-<a href="https://cryptodefees.eth" class="content-l2" target="_blank">cryptodefees</a><br>
+<a href="https://app.ens.domains/name/cryptopoetic.eth/details" class="content-l2" target="_blank">cryptopoetic</a><br>
+<a href="https://app.ens.domains/name/cryptoproject.eth/details" class="content-l2" target="_blank">cryptoproject</a><br>
+<a href="https://app.ens.domains/name/cryptoaesthetic.eth/details" class="content-l2" target="_blank">cryptoaesthetic</a><br>
+<a href="https://app.ens.domains/name/cryptoeffect.eth/details" class="content-l2" target="_blank">cryptoeffect</a><br>
+<a href="https://app.ens.domains/name/cryptoedition.eth/details" class="content-l2" target="_blank">cryptoedition</a><br>
+<a href="https://app.ens.domains/name/cryptorelease.eth/details" class="content-l2" target="_blank">cryptorelease</a><br>
+<a href="https://app.ens.domains/name/cryptoemission.eth/details" class="content-l2" target="_blank">cryptoemission</a><br>
+<a href="https://app.ens.domains/name/cryptodefees.eth/details" class="content-l2" target="_blank">cryptodefees</a><br>
 </div>
 
 0xb1ddaea351354f6e45a8ada12406d455806d7112ee4aded4be5d3ad4965b961e<br>
@@ -84,10 +85,10 @@ decentralized book<br>
 
 
 <div class="p2">
-<a href="https://cryptoconnection.eth" class="content-l2" target="_blank">cryptoconnection</a><br>
-<a href="https://cryptodevice.eth" class="content-l2" target="_blank">cryptodevice</a><br>
-<a href="https://cryptocollection.eth" class="content-l2" target="_blank">cryptocollection</a><br>
-<a href="https://cryptousweis.eth" class="content-l2" target="_blank">cryptousweis</a><br>
+<a href="https://app.ens.domains/name/cryptoconnection.eth/details" class="content-l2" target="_blank">cryptoconnection</a><br>
+<a href="https://app.ens.domains/name/cryptodevice.eth/details" class="content-l2" target="_blank">cryptodevice</a><br>
+<a href="https://app.ens.domains/name/cryptocollection.eth/details" class="content-l2" target="_blank">cryptocollection</a><br>
+<a href="https://app.ens.domains/name/cryptousweis.eth/details" class="content-l2" target="_blank">cryptousweis</a><br>
 </div>
 
 0x49e0f5a17dda3e2f9d39bdf0c2d5f852bc4cb484f48aba816a47c5435946bdb4<br>
@@ -105,10 +106,10 @@ decentralized book<br>
 
 
 <div class="p3">
-<a href="https://cryptohipster.eth" class="content-l2" target="_blank">cryptohipster</a><br>
-<a href="https://cryptohead.eth" class="content-l2" target="_blank">cryptohead</a><br>
-<a href="https://cryptoroad.eth" class="content-l2" target="_blank">cryptoroad</a><br>
-<a href="https://cryptodead.eth" class="content-l2" target="_blank">cryptodead</a><br>
+<a href="https://app.ens.domains/name/cryptohipster.eth/details" class="content-l2" target="_blank">cryptohipster</a><br>
+<a href="https://app.ens.domains/name/cryptohead.eth/details" class="content-l2" target="_blank">cryptohead</a><br>
+<a href="https://app.ens.domains/name/cryptoroad.eth/details" class="content-l2" target="_blank">cryptoroad</a><br>
+<a href="https://app.ens.domains/name/cryptodead.eth/details" class="content-l2" target="_blank">cryptodead</a><br>
 </div>
 
 0x2f28a9965f8ee62814dd690c2aafb6f476949b7f97f5ebdbda11aa63d0575c36<br>
@@ -126,10 +127,10 @@ decentralized book<br>
 
 
 <div class="p4">
-<a href="https://cryptoacid.eth" class="content-l2" target="_blank">cryptoacid</a><br>
-<a href="https://cryptotrip.eth" class="content-l2" target="_blank">cryptotrip</a><br>
-<a href="https://cryptochannel.eth" class="content-l2" target="_blank">cryptochannel</a><br>
-<a href="https://cryptosleep.eth" class="content-l2" target="_blank">cryptosleep</a><br>
+<a href="https://app.ens.domains/name/cryptoacid.eth/details" class="content-l2" target="_blank">cryptoacid</a><br>
+<a href="https://app.ens.domains/name/cryptotrip.eth/details" class="content-l2" target="_blank">cryptotrip</a><br>
+<a href="https://app.ens.domains/name/cryptochannel.eth/details" class="content-l2" target="_blank">cryptochannel</a><br>
+<a href="https://app.ens.domains/name/cryptosleep.eth/details" class="content-l2" target="_blank">cryptosleep</a><br>
 </div>
 
 0xf863a3d12399190ebbc4c1eebe15857f05de25416db0dd72fa6b43f5c560543a<br>
@@ -147,18 +148,18 @@ decentralized book<br>
 
 
 <div class="p5">
-<a href="https://newdomain.eth" class="content-l2" target="_blank">newdomain</a><br>
-<a href="https://newhash.eth" class="content-l2" target="_blank">newhash</a><br>
-<a href="https://newdomains.eth" class="content-l2" target="_blank">newdomains</a><br>
-<a href="https://newcash.eth" class="content-l2" target="_blank">newcash</a><br>
-<a href="https://newmedia.eth" class="content-l2" target="_blank">newmedia</a><br>
-<a href="https://newlanguage.eth" class="content-l2" target="_blank">newlanguage</a><br>
-<a href="https://newmedium.eth" class="content-l2" target="_blank">newmedium</a><br>
-<a href="https://newsandwich.eth" class="content-l2" target="_blank">newsandwich</a><br>
-<a href="https://newme.eth" class="content-l2" target="_blank">newme</a><br>
-<a href="https://newserious.eth" class="content-l2" target="_blank">newserious</a><br>
-<a href="https://newfee.eth" class="content-l2" target="_blank">newfee</a><br>
-<a href="https://newexperience.eth" class="content-l2" target="_blank">newexperience</a><br>
+<a href="https://app.ens.domains/name/newdomain.eth/details" class="content-l2" target="_blank">newdomain</a><br>
+<a href="https://app.ens.domains/name/newhash.eth/details" class="content-l2" target="_blank">newhash</a><br>
+<a href="https://app.ens.domains/name/newdomains.eth/details" class="content-l2" target="_blank">newdomains</a><br>
+<a href="https://app.ens.domains/name/newcash.eth/details" class="content-l2" target="_blank">newcash</a><br>
+<a href="https://app.ens.domains/name/newmedia.eth/details" class="content-l2" target="_blank">newmedia</a><br>
+<a href="https://app.ens.domains/name/newlanguage.eth/details" class="content-l2" target="_blank">newlanguage</a><br>
+<a href="https://app.ens.domains/name/newmedium.eth/details" class="content-l2" target="_blank">newmedium</a><br>
+<a href="https://app.ens.domains/name/newsandwich.eth/details" class="content-l2" target="_blank">newsandwich</a><br>
+<a href="https://app.ens.domains/name/newme.eth/details" class="content-l2" target="_blank">newme</a><br>
+<a href="https://app.ens.domains/name/newserious.eth/details" class="content-l2" target="_blank">newserious</a><br>
+<a href="https://app.ens.domains/name/newfee.eth/details" class="content-l2" target="_blank">newfee</a><br>
+<a href="https://app.ens.domains/name/newexperience.eth/details" class="content-l2" target="_blank">newexperience</a><br>
 </div>
 
 0xaed1d5a221b62dfde3da9eb248d51563d93b32830652892866f0e690c99130c4<br>
@@ -185,25 +186,25 @@ decentralized book<br>
 
 
 <div class="p6">
-allyouearis.near<br>
-allyouhearis.near<br>
-allyouclearis.near<br>
-allyouhereis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouearis.near" class="content-l2" target="_blank">allyouearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouhearis.near" class="content-l2" target="_blank">allyouhearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouclearis.near" class="content-l2" target="_blank">allyouclearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouhereis.near" class="content-l2" target="_blank">allyouhereis.near</a><br>
 
-allyoutieris.near<br>
-allyougearis.near<br>
-allyoushearis.near<br>
-allyouveeris.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoutieris.near" class="content-l2" target="_blank">allyoutieris.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyougearis.near" class="content-l2" target="_blank">allyougearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoushearis.near" class="content-l2" target="_blank">allyoushearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouveeris.near" class="content-l2" target="_blank">allyouveeris.near</a><br>
 
-allyoufearis.near<br>
-allyousnearis.near<br>
-allyourearis.near<br>
-allyouqueeris.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoufearis.near" class="content-l2" target="_blank">allyoufearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyousnearis.near" class="content-l2" target="_blank">allyousnearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyourearis.near" class="content-l2" target="_blank">allyourearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouqueeris.near" class="content-l2" target="_blank">allyouqueeris.near</a><br>
 
-allyoudearis.near<br>
-allyoucheeris.near<br>
-allyoupeeris.near<br>
-allyounearis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoudearis.near" class="content-l2" target="_blank">allyoudearis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoucheeris.near" class="content-l2" target="_blank">allyoucheeris.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoupeeris.near" class="content-l2" target="_blank">allyoupeeris.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyounearis.near" class="content-l2" target="_blank">allyounearis.near</a><br>
 </div>
 
 3F8ZGNi7hfuwenceX8v4ABAcr2nDNe7FDYt1JztuX2yx<br>
@@ -235,25 +236,25 @@ FG6rZaXqR6QKctLcXuD3PgBxoK2JbeMXz9593MNKCLZk<br>
 
 
 <div class="p7">
-allyouneedis.near<br>
-allyoudeedis.near<br>
-allyouweedis.near<br>
-allyoumeadis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouneedis.near" class="content-l2" target="_blank">allyouneedis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoudeedis.near" class="content-l2" target="_blank">allyoudeedis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouweedis.near" class="content-l2" target="_blank">allyouweedis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoumeadis.near" class="content-l2" target="_blank">allyoumeadis.near</a><br>
 
-allyoumakeis.near<br>
-allyoutakeis.near<br>
-allyoustakeis.near<br>
-allyoufakeis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoumakeis.near" class="content-l2" target="_blank">allyoumakeis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoutakeis.near" class="content-l2" target="_blank">allyoutakeis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoustakeis.near" class="content-l2" target="_blank">allyoustakeis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoufakeis.near" class="content-l2" target="_blank">allyoufakeis.near</a><br>
 
-allyoupunkis.near<br>
-allyoumonkis.near<br>
-allyoujunkis.near<br>
-allyoubankis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoupunkis.near" class="content-l2" target="_blank">allyoupunkis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoumonkis.near" class="content-l2" target="_blank">allyoumonkis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoujunkis.near" class="content-l2" target="_blank">allyoujunkis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoubankis.near" class="content-l2" target="_blank">allyoubankis.near</a><br>
 
-allyougovis.near<br>
-allyoustaffis.near<br>
-allyoulaughis.near<br>
-allyouloveis.near<br>
+<a href="https://explorer.mainnet.near.org/accounts/allyougovis.near" class="content-l2" target="_blank">allyougovis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoustaffis.near" class="content-l2" target="_blank">allyoustaffis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyoulaughis.near" class="content-l2" target="_blank">allyoulaughis.near</a><br>
+<a href="https://explorer.mainnet.near.org/accounts/allyouloveis.near" class="content-l2" target="_blank">allyouloveis.near</a><br>
 </div>
 
 CEf8oAnE1Z2HtHbX8hTEkZKCvRX1kumgWk7rqunCb6NL<br>
