--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <header>
 
-  <div class="container-head">
-    <div class="logo"><h1><b>&lt;Crypto&gt;Poetry</h1></b></div>
-    <nav>
-      <ul>
-       <li><a href="index.html">Home</a></li>
-       <li><a href="pages/about.html">About</a></li>
-       <li><a href="pages/book.html">Book</a></li>
-       <li><a href="pages/volume.html">Volume</a></li>
-      </ul>
-     </nav>
-  </div>
+<div class="container-head">
+<div class="logo"><h1><b>&lt;Crypto&gt;Poetry</b></h1></div>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="pages/about.html">About</a></li>
+<li><a href="pages/book.html">Book</a></li>
+<li><a href="pages/volume.html">Volume</a></li>
+</ul>
+</nav>
+</div>
 
 </header>
 
@@ -38,9 +38,7 @@
 
 
 *<br>
-<div class="ttl">
-  <p class="gradient-text">Intro</p>
-</div>
+<div class="ttl"><p>Intro</p></div>
 
 *<br>
 *<br>
