--- a/pages/volume.html
+++ b/pages/volume.html
@@ -69,27 +69,27 @@ For cryptopoet doesn't necessarily write <i><b>about</b></i> Web3, but preferabl
 <div class="va2">
 
 <br>
-&lt;Crypto&gt;Poetry is a net art / on-chain project that explores the possibilities of creating poetic texts in the Web3 space and is based on its main principles and technologies: decentralization, cryptography, and blockchain.<br>
+&lt;Crypto&gt;Poetry is the net art project that explores the possibilities of creating poetic texts in Web3 space and is based on its main principles and technologies: decentralization, cryptography, and blockchain.<br>
 <br>
 
 <br>
-&lt;Crypto&gt;Poetry exists in an art-in-progress mode, and as it develops, a decentralized Proof of Rhyme book is published. It is a collection of small poems published on various blockchains.<br>
+&lt;Crypto&gt;Poetry exists in an art-in-progress mode, and as it develops, the decentralized Proof of Rhyme book is published. It is the collection of small poems published on various blockchains.<br>
 <br>
 
 <br>
-In addition, the project team is working on the first collection of poetry &lt;Crypto&gt;Poetry Volume. Poets who write poetry using technologies and/or elements included in the Web3 ecosystem are invited to participate (tags: blockchain, on-chain, block explorer, smart contract, dApp, IPFS, API, NFT, DSN, dMail, dMessenger, and so on). However, poets must use this toolkit in a way that is original and creative enough to have an innovative influence on the poetic form of the poem and poetry in general.<br>
+In addition, the project team is working on the first collection of poetry &lt;Crypto&gt;Poetry Volume. Poets who write poetry using technologies and/or elements included in Web3 ecosystem are invited to participate (tags: blockchain, on-chain, block explorer, smart contract, dApp, IPFS, API, NFT, DSN, dMail, dMessenger, and so on). However, poets must use this toolkit in a way that is original and creative enough to have an innovative influence on the poetic form of the poem and poetry in general.<br>
 <br>
 
 <br>
-&lt;Crypto&gt;Poetry Volume will be published in a special section of the &lt;Crypto&gt;Poetry website, where each author will be able to post their poems (several artworks, depending on the situation), as well as a brief bio/info + links to an account or web page.<br>
+&lt;Crypto&gt;Poetry Volume will be published in the special section of the &lt;Crypto&gt;Poetry website, where each author will be able to post their poems (several artworks, depending on the situation), as well as a brief bio/info + links to the account or web page.<br>
 <br>
 
 <br>
-&lt;Crypto&gt;Poetry is an experimental artistic non-commercial project. It is not designed to make money and is not profit-oriented. However, to support the contributors, the &lt;Crypto&gt;Poetry Volume may be published in a limited edition NFT format.<br>
+&lt;Crypto&gt;Poetry is the experimental artistic non-commercial project. It is not designed to make money and is not profit-oriented. However, to support the contributors, &lt;Crypto&gt;Poetry Volume may be published in a limited edition NFT format.<br>
 <br>
 
 <br>
-&lt;Crypto&gt;Poetry is an open multi-chain project, so it's hard to find a common platform for it in the Web3 world right now. On the other hand, this is its peculiarity and challenge. This reflects the current problem: how can the idea of ​​decentralization be implemented without being tied to any one blockchain as a center.<br>
+&lt;Crypto&gt;Poetry is the open multichain project, so it's hard to find a common platform for it in Web3 world right now. On the other hand, this is its peculiarity and challenge. This reflects the current problem: how can the idea of ​​decentralization be implemented without being tied to any one blockchain as a center.<br>
 <br>
 
 <br>
