--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <h3>Some questions that the cryptopoet<br>
 asked himself last summer</h3><br>
 
+<div class="container-txt">
+
 <div class="hp1">
 What is poetry?<br>
 What is a poem?<br>
