--- a/pages/book.html
+++ b/pages/book.html
@@ -189,7 +189,7 @@ decentralized book<br>
 CBDC is dead</a><br>
 </div>
 
-0xf863a3d12399190ebbc4c1eebe15857f05de25416db0dd72fa6b43f5c560543a<br>
+0x5C916F7A6BBB0664C531DC4C9C519A4B148664DC93E6762B5AC74A7ABB748665<br>
 </pre></div>
 
 
@@ -205,19 +205,35 @@ CBDC is dead</a><br>
 The weapon of the precariat</a><br>
 </div>
 
-0xf863a3d12399190ebbc4c1eebe15857f05de25416db0dd72fa6b43f5c560543a<br>
+0x1B9E038DF1130DC600E15D18AAE2CAFC9D6FE3900A3F412D555B3D589E10573E<br>
+</pre></div>
+
+
+<div class="container-poem8">
+<pre>
+*<br>
+<h3>Hello</h3>
+0x01C..................................DC4<br>
+
+
+<div class="p8">
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/8184177027271354109785747479972900027595533209029531232621850333375592697122" class="content-l2" target="_blank">Hello sister,<br>
+It is the InterPlanetary Time System</a><br>
+</div>
+
+0x1218147DADBF05D7B7F504F5F9E773E18CFA5880EE05187EA60EEC5D72708D22<br>
 </pre></div>
 
 <div class="container-chain"><a href="https://explorer.mainnet.near.org" class="content" target="_blank">{Chain:Near}</a></div>
 
-<div class="container-poem8">
+<div class="container-poem9">
 <pre>
 *<br>
 <h3>AllYouEarIsNear</h3>
 47ne9sfgPVV7P5g1apajvBZyPGFR5r17QV1DE745yhWJ<br>
 
 
-<div class="p8">
+<div class="p9">
 <a href="https://explorer.mainnet.near.org/accounts/allyouearis.near" class="content-l2" target="_blank">allyouearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouhearis.near" class="content-l2" target="_blank">allyouhearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouclearis.near" class="content-l2" target="_blank">allyouclearis.near</a><br>
@@ -260,14 +276,14 @@ FG6rZaXqR6QKctLcXuD3PgBxoK2JbeMXz9593MNKCLZk<br>
 7Q6e61zDT7cB9GQLdXZvJxffKQUtrfHyKAsqdKsUf3Mt<br>
 </pre></div>
 
-<div class="container-poem9">
+<div class="container-poem10">
 <pre>
 *<br>
 <h3>AllYouNeedIsNear</h3>
 9oFuLhapiQ6N43xejg1LHUdqGQ6zC4NZ3bMjEw1Aaitj<br>
 
 
-<div class="p9">
+<div class="p10">
 <a href="https://explorer.mainnet.near.org/accounts/allyouneedis.near" class="content-l2" target="_blank">allyouneedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyoudeedis.near" class="content-l2" target="_blank">allyoudeedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouweedis.near" class="content-l2" target="_blank">allyouweedis.near</a><br>
@@ -313,14 +329,14 @@ FMdMzxD3BTNuETpng9LZD4mSc7XZceHKjjCiTdTSsMBG<br>
 
 <div class="container-chain"><a href="https://everscan.io" class="content" target="_blank">{Chain:Everscale}</a></div>
 
-<div class="container-poem10">
+<div class="container-poem11">
 <pre>
 *<br>
 <h3>CrystalCoin</h3>
 0:967...315 >> 0:1f8...7e8<br>
 
 
-<div class="p10">
+<div class="p11">
 CrystalCoin<br>
 &lt;my&gt;<br>
 CrystalShip<br>
@@ -344,14 +360,14 @@ Msg2ID: 56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c<br>
 
 </pre></div>
 
-<div class="container-poem11">
+<div class="container-poem12">
 <pre>
 *<br>
 <h3>EverScale</h3>
 0:967...315 >> 0:942...063<br>
 
 
-<div class="p11">
+<div class="p12">
 EverScale<br>
 &lt;for&gt;<br>
 EverThing<br>
@@ -369,12 +385,12 @@ MsgID: efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6
 
 <div class="container-chain"><a href="https://hub.mintscan.io" class="content" target="_blank">{Chain:Cosmos}</a></div>
 
-<div class="container-poem12">
+<div class="container-poem13">
 <pre>
 *<br>
 <h3>Hacker on the bridge</h3>
 
-<div class="p12">
+<div class="p13">
 Tuned Lambonode<br>
 On the highway code<br>
 Look's like Lady D<br>
