--- a/pages/book.html
+++ b/pages/book.html
@@ -185,7 +185,7 @@ decentralized book<br>
 
 
 <div class="p6">
-<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/41869744288356713423857887170281141583798139535234170190671004075790947354213" class="content-l2" target="_blank">Emansipay ahead -<br>
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/41869744288356713423857887170281141583798139535234170190671004075790947354213" class="content-l2" target="_blank">Emansipay ahead<br>
 CBDC is dead</a><br>
 </div>
 
@@ -201,7 +201,7 @@ CBDC is dead</a><br>
 
 
 <div class="p7">
-<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/12491633279962798221937348928930035582365937281749782655915312491469086938942" class="content-l2" target="_blank">NFT but not fiat -<br>
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/12491633279962798221937348928930035582365937281749782655915312491469086938942" class="content-l2" target="_blank">NFT but not fiat<br>
 The weapon of the precariat</a><br>
 </div>
 
@@ -217,23 +217,40 @@ The weapon of the precariat</a><br>
 
 
 <div class="p8">
-<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/8184177027271354109785747479972900027595533209029531232621850333375592697122" class="content-l2" target="_blank">Hello sister,<br>
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/8184177027271354109785747479972900027595533209029531232621850333375592697122" class="content-l2" target="_blank">Hello sister<br>
 It is the InterPlanetary Time System</a><br>
 </div>
+
 
 0x1218147DADBF05D7B7F504F5F9E773E18CFA5880EE05187EA60EEC5D72708D22<br>
 </pre></div>
 
+<div class="container-poem9">
+<pre>
+*<br>
+<h3>Punk</h3>
+0x01C..................................DC4<br>
+
+
+<div class="p9">
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/103744516287562999086910453557469103940898437680406158575849663208812621482152" class="content-l2" target="_blank">Punk is dead<br>
+Gimme a royalty dot eth</a><br>
+</div>
+
+0xE55D50BB23A2A3D3FB0183786C86977EF72E5F5DB1B9BC5CE05213D1323A48A8<br>
+</pre></div>
+
+
 <div class="container-chain"><a href="https://explorer.mainnet.near.org" class="content" target="_blank">{Chain:Near}</a></div>
 
-<div class="container-poem9">
+<div class="container-poem10">
 <pre>
 *<br>
 <h3>AllYouEarIsNear</h3>
 47ne9sfgPVV7P5g1apajvBZyPGFR5r17QV1DE745yhWJ<br>
 
 
-<div class="p9">
+<div class="p10">
 <a href="https://explorer.mainnet.near.org/accounts/allyouearis.near" class="content-l2" target="_blank">allyouearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouhearis.near" class="content-l2" target="_blank">allyouhearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouclearis.near" class="content-l2" target="_blank">allyouclearis.near</a><br>
@@ -276,14 +293,14 @@ FG6rZaXqR6QKctLcXuD3PgBxoK2JbeMXz9593MNKCLZk<br>
 7Q6e61zDT7cB9GQLdXZvJxffKQUtrfHyKAsqdKsUf3Mt<br>
 </pre></div>
 
-<div class="container-poem10">
+<div class="container-poem11">
 <pre>
 *<br>
 <h3>AllYouNeedIsNear</h3>
 9oFuLhapiQ6N43xejg1LHUdqGQ6zC4NZ3bMjEw1Aaitj<br>
 
 
-<div class="p10">
+<div class="p11">
 <a href="https://explorer.mainnet.near.org/accounts/allyouneedis.near" class="content-l2" target="_blank">allyouneedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyoudeedis.near" class="content-l2" target="_blank">allyoudeedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouweedis.near" class="content-l2" target="_blank">allyouweedis.near</a><br>
@@ -329,14 +346,14 @@ FMdMzxD3BTNuETpng9LZD4mSc7XZceHKjjCiTdTSsMBG<br>
 
 <div class="container-chain"><a href="https://everscan.io" class="content" target="_blank">{Chain:Everscale}</a></div>
 
-<div class="container-poem11">
+<div class="container-poem12">
 <pre>
 *<br>
 <h3>CrystalCoin</h3>
 0:967...315 >> 0:1f8...7e8<br>
 
 
-<div class="p11">
+<div class="p12">
 CrystalCoin<br>
 &lt;my&gt;<br>
 CrystalShip<br>
@@ -360,14 +377,14 @@ Msg2ID: 56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c<br>
 
 </pre></div>
 
-<div class="container-poem12">
+<div class="container-poem13">
 <pre>
 *<br>
 <h3>EverScale</h3>
 0:967...315 >> 0:942...063<br>
 
 
-<div class="p12">
+<div class="p13">
 EverScale<br>
 &lt;for&gt;<br>
 EverThing<br>
@@ -385,12 +402,12 @@ MsgID: efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6
 
 <div class="container-chain"><a href="https://hub.mintscan.io" class="content" target="_blank">{Chain:Cosmos}</a></div>
 
-<div class="container-poem13">
+<div class="container-poem14">
 <pre>
 *<br>
 <h3>Hacker on the bridge</h3>
 
-<div class="p13">
+<div class="p14">
 Tuned Lambonode<br>
 On the highway code<br>
 Look's like Lady D<br>
