--- a/pages/book.html
+++ b/pages/book.html
@@ -257,16 +257,32 @@ On a programmable repress</a><br>
 </pre></div>
 
 
+<div class="container-poem11">
+<pre>
+*<br>
+<h3>Rhyme</h3>
+0x01C..................................DC4<br>
+
+
+<div class="p11">
+<a href="https://etherscan.io/nft/0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85/77730054745455955804409025797979811591399068934388987175619357566523094073634" class="content-l2" target="_blank">Rhyme to rhyme process<br>
+To the moon express</a><br>
+</div>
+
+0xABD9A6E38D184F2256DA5340F0B07B901E888058076B0259D03C52BD81C40122<br>
+</pre></div>
+
+
 <div class="container-chain"><a href="https://explorer.mainnet.near.org" class="content" target="_blank">{Chain:Near}</a></div>
 
-<div class="container-poem11">
+<div class="container-poem12">
 <pre>
 *<br>
 <h3>AllYouEarIsNear</h3>
 47ne9sfgPVV7P5g1apajvBZyPGFR5r17QV1DE745yhWJ<br>
 
 
-<div class="p11">
+<div class="p12">
 <a href="https://explorer.mainnet.near.org/accounts/allyouearis.near" class="content-l2" target="_blank">allyouearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouhearis.near" class="content-l2" target="_blank">allyouhearis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouclearis.near" class="content-l2" target="_blank">allyouclearis.near</a><br>
@@ -309,14 +325,14 @@ FG6rZaXqR6QKctLcXuD3PgBxoK2JbeMXz9593MNKCLZk<br>
 7Q6e61zDT7cB9GQLdXZvJxffKQUtrfHyKAsqdKsUf3Mt<br>
 </pre></div>
 
-<div class="container-poem12">
+<div class="container-poem13">
 <pre>
 *<br>
 <h3>AllYouNeedIsNear</h3>
 9oFuLhapiQ6N43xejg1LHUdqGQ6zC4NZ3bMjEw1Aaitj<br>
 
 
-<div class="p12">
+<div class="p13">
 <a href="https://explorer.mainnet.near.org/accounts/allyouneedis.near" class="content-l2" target="_blank">allyouneedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyoudeedis.near" class="content-l2" target="_blank">allyoudeedis.near</a><br>
 <a href="https://explorer.mainnet.near.org/accounts/allyouweedis.near" class="content-l2" target="_blank">allyouweedis.near</a><br>
@@ -362,14 +378,14 @@ FMdMzxD3BTNuETpng9LZD4mSc7XZceHKjjCiTdTSsMBG<br>
 
 <div class="container-chain"><a href="https://everscan.io" class="content" target="_blank">{Chain:Everscale}</a></div>
 
-<div class="container-poem13">
+<div class="container-poem14">
 <pre>
 *<br>
 <h3>CrystalCoin</h3>
 0:967...315 >> 0:1f8...7e8<br>
 
 
-<div class="p13">
+<div class="p14">
 CrystalCoin<br>
 &lt;my&gt;<br>
 CrystalShip<br>
@@ -393,14 +409,14 @@ Msg2ID: 56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c<br>
 
 </pre></div>
 
-<div class="container-poem14">
+<div class="container-poem15">
 <pre>
 *<br>
 <h3>EverScale</h3>
 0:967...315 >> 0:942...063<br>
 
 
-<div class="p14">
+<div class="p15">
 EverScale<br>
 &lt;for&gt;<br>
 EverThing<br>
@@ -418,12 +434,12 @@ MsgID: efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6
 
 <div class="container-chain"><a href="https://hub.mintscan.io" class="content" target="_blank">{Chain:Cosmos}</a></div>
 
-<div class="container-poem15">
+<div class="container-poem16">
 <pre>
 *<br>
 <h3>Hacker on the bridge</h3>
 
-<div class="p15">
+<div class="p16">
 Tuned Lambonode<br>
 On the highway code<br>
 Look's like Lady D<br>
@@ -470,7 +486,7 @@ Msg3TxH: <a href="https://www.mintscan.io/cosmos/txs/768EB354BF70F92319EEA8DBDA4
 
 <footer>
 
-<div class="container-foot">HTML+CSS+IPFS ~ Deployed by Cyberborea</div>
+<div class="container-foot">HTML+CSS+IPFS ~ Deployed by <a href="https://cyberborea.eth.limo" class="content-footer" target="_blank">Cyberborea</a></div>
 
 </footer>
 
